# krr_agent

./: .gitignore  README.md
krr_agent/: CMakeLists.txt  README.md  package.xml
krr_agent/config/: plansys2_params.yaml
krr_agent/include/krr_agent/: action_move_to_drop_location_t1.hpp  action_move_to_drop_location_t2.hpp  action_move_to_object.hpp  action_next_room.hpp  action_pick.hpp  action_place.hpp  action_place_back.hpp  krr_agent.hpp  task_controller.hpp
krr_agent/launch/: task1.launch.py  task1.launch.xml  task2.launch.py  task2.launch.xml  task3.launch.py  task3.launch.xml
krr_agent/pddl/: domain_t1.pddl  domain_t2.pddl  domain_t3.pddl  problem_dummy.pddl  problem_dummy_t3.pddl  problem_exploration_template.pddl  problem_t1_template.pddl  problem_t2_template.pddl  problem_t3_template.pddl
krr_agent/scripts/: data.tql  schema.tql  setup_database.py  task1_manager.py  task2_manager.py  task2_multiple_pddl_manager.py  task3_manager.py  task_manager_base.py
krr_agent/src/: action_move_to_drop_location_t1.cpp  action_move_to_drop_location_t2.cpp  action_move_to_object.cpp  action_next_room.cpp  action_pick.cpp  action_place.cpp  action_place_back.cpp  krr_agent.cpp  set_initial_pose.cpp  task_controller.cpp
krr_gazebo/: CMakeLists.txt  README.md  package.xml
krr_gazebo/launch/: krr_gazebo.launch.xml
krr_gazebo/models/Fidget Spinner/: model.config  model.sdf
krr_gazebo/models/Fidget Spinner/meshes/: Spinner.stl  Spinner_scaled.stl
krr_gazebo/worlds/: test_scenario1.1.world  test_scenario2.1.world  test_scenario3.1.world
scripts/: _server_id
scripts/task_db/data/: 000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  000026.sst  000031.sst  IDENTITY  LOG  LOG.old.1775507301955866  LOG.old.1775507520772646  LOG.old.1775507663722773  MANIFEST-000033  OPTIONS-000030
scripts/task_db/schema/: 000008.sst  IDENTITY  LOG  LOG.old.1775507301899229  LOG.old.1775507520720315  LOG.old.1775507663600326  MANIFEST-000018
typedb_data/: _server_id
typedb_data/task_db/data/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  OPTIONS-000009
typedb_data/task_db/schema/: IDENTITY  LOG  OPTIONS-000007
