<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>krr_gazebo</name>
  <version>0.0.0</version>
  <description>Worlds for the KRR final project</description>

  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <author email="g.rezendesilva@tudelft.nl">Gustavo Rezende</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mirte_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
